Quieten a test run
Running the tests printed around 500 lines for 37 snapshots, and the one
line per test saying whether it passed was lost in it.

The framework hands each message a priority, which was thrown away and
everything logged at info. Ninety-two per cent of what a render logged
was verbose or debug, including two stack traces from a font that fails
to load. The priority now maps to a matching level, so those sit below
the default threshold and can still be turned on.

The framework's own resources define some style attributes twice. That
was warned about once per attribute, and there is nothing anyone can do
about it.

Mugshot attaches a Byte Buddy agent to patch Build.VERSION, and the JVM
warned four lines about a dynamically loaded agent. The test task now
declares the attach is intended.

This repo also showed standard streams for every test, which is what
put the framework's logging on screen in the first place.